# icu

./: meson.build
source/: Makefile.am  configure.ac
source/common/: Makefile.am  udata.cpp
source/common/unicode/: udata.h
source/extra/scrptrun/: Makefile.am
source/extra/uconv/: Makefile.am
source/i18n/: Makefile.am
source/io/: Makefile.am
source/stubdata/: Makefile.am
source/tools/: Makefile.am.tool
